--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,19 @@
-       body {
-            font-family: Arial, sans-serif;
-            /* display: flex;
-            justify-content: center;
-            align-items: center; */
-            
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
+    html, body {
+      height: 100%;
+      font-family: Arial, sans-serif;            
+      min-height: 100vh;
+      margin: 0;
+      background-color: #f4f4f4;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1; /* prend tout l’espace restant */
+    }
         .contact-container {
             background-color: #fff;
             padding: 30px;
