--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block title %}À propos{% endblock %}
 
 {% block content %}
-<div class="text-center">
+<div class="container mt-5 text-center  custom-padding">
     <h1 class="text-primary mb-4">À propos de ce projet</h1>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
