--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="contact-container">
+    <div class="contact-container mt-5 text-center custom-padding">
         <h1>Contact Us</h1>
         <div class="contact-info">
             <i class="bi bi-envelope"></i>
