--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,6 @@
 <div class="container mt-5 text-center">
     <h1 class="display-4">Bienvenue sur notre site !</h1>
     <p class="lead mt-4">Découvrez notre projet Flask collaboratif, construit en équipe avec Git.</p>
-    <a href="/about" class="btn btn-primary btn-lg mt-3">En savoir plus</a>
+    <a href="/about" class="btn btn-primary btn-lg mt-3 button-move" id="moveBtn">En savoir plus</a>
 </div>
 {% endblock %}
