--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
     </footer>
     <!-- Bootstrap JS - IMPORTANT:Doit être avant la fermeture de </body> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/moveButton.js"></script>
 </body>
 
 </html>
